--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,36 @@ services:
     ports:
       - 2828:5432
     env_file:
-      - .env
+      - ./src/.env
     volumes:
       - weather-db:/docker-volumes/weather-db
+
+    command: -p 5432
+    expose:
+      - 5432
+
   tg_api:
     build:
       context: .
     env_file:
-      - .env
+      - ./src/.env
     container_name: weatherbot
-    command: bash -c "/app/scripts/start.sh"
+    # command: bash -c "/app/scripts/start.sh"
     depends_on:
       - db
+      - redis
+
+  redis:
+    image: redis:latest
+    container_name: redis_db
+    ports:
+      - 2829:6379
+    env_file:
+      - ./src/.env
+    command: --port 6379
+    expose:
+      - 6379
+
 
 volumes:
   weather-db:
